--- a/package.json
+++ b/package.json
@@ -9,19 +9,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.13.3"
+    "@astrojs/sitemap": "^3.5.1",
+    "@tailwindcss/vite": "^4.1.12",
+    "astro": "^5.13.3",
+    "astro-icon": "^1.1.5",
+    "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
-    "@eslint/js": "^9.34.0",
-    "@unocss/eslint-config": "^66.4.2",
-    "eslint": "^9.34.0",
-    "eslint-plugin-astro": "^1.3.1",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
-    "prettier-plugin-astro": "^0.14.1",
-    "typescript-eslint": "^8.40.0",
-    "unocss": "^66.4.2"
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
