--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.12",
     "astro": "^5.13.3",
     "astro-icon": "^1.1.5",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
