--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@tailwindcss/vite": "^4.1.12",
     "astro": "^5.13.3",
     "astro-icon": "^1.1.5",
-    "prettier-plugin-tailwindcss": "^0.6.14",
-    "tailwindcss": "^4.1.12"
+    "preline": "^3.2.3",
+    "@tailwindcss/typography": "^0.5.16"
   },
   "devDependencies": {
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
-    "prettier-plugin-astro": "^0.14.1"
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.14"
   }
 }
