--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@astrojs/sitemap": "^3.5.1",
+    "@astrojs/svelte": "^7.1.1",
     "@directus/sdk": "^20.0.3",
+    "@lucide/astro": "^0.544.0",
+    "@lucide/svelte": "^0.544.0",
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.12",
     "astro": "^5.13.3",
