--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "turbo run lint"
   },
   "devDependencies": {
+    "prettier": "^3.6.2",
     "turbo": "^2.5.6"
   },
   "packageManager": "npm@11.5.2",
