--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
   },
   "devDependencies": {
     "prettier": "^3.6.2",
+    "prettier-plugin-svelte": "^3.4.0",
     "turbo": "^2.5.6"
   },
   "packageManager": "npm@11.6.1",
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "npm": "^11.6.1"
+  }
 }
